fixng some issues and creating missing services
